fixed bug in loading images

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 			<h1>Flower Catalog</h1>
 			<hr />
 			<div class="content" >
-				<img src="./freshorigins.jpg" alt="Flower" />
+				<img src="./images/freshorigins.jpg" alt="Flower" />
 				<div >
 					<ul>
 						<li><a href="#Abeliophyllum">Abeliophyllum</a></li>
 						<li><a href="#Ageratum">Ageratum</a></li>
 					</ul>
-				<img src="./animated-flower-image-0021.gif" alt="jar" /></br>
+				<img src="./images/animated-flower-image-0021.gif" alt="jar" /></br>
 				<a href="https://google.com">Guest Book</a>
 				</div>
 			</div>
@@ -26,7 +26,7 @@
 				Abeliophyllum</h1>
 			<hr />
 			<div class="content" >
-				<img src="./pbase-Abeliophyllum.jpg" alt="Flower" />
+				<img src="./images/pbase-Abeliophyllum.jpg" alt="Flower" />
 				<div>
 				<p>Abeliophyllum (White Forsythia, or Korean
 					Abelialeaf) is a monotypic genus of flowering plants in
@@ -54,10 +54,10 @@
 		</div>
 			<div class="page" id="Ageratum">
 				<h1><span><a href="#mainPage">&lt;&lt;</a></span>
-					Abeliophyllum</h1>
+					Ageratum</h1>
 				<hr />
 				<div class="content" >
-					<img src="./pbase-agerantum.jpg" alt="Flower" />
+					<img src="./images/pbase-agerantum.jpg" alt="Flower" />
 					<div>
 					<p>Ageratum (/əˈdʒɛrətəm/),[2] (whiteweed in the USA), is
 
