--- a/ageratum.html
+++ b/ageratum.html
@@ -22,7 +22,7 @@
             leaves form compact clusters. The fluffy flowers are lavender-blue,
             pink, lilac, or white; and spread in small
           </p>
-          <a href="">Download as pdf</a>
+          <a href="./PDFs/agerantum.pdf">Download as pdf</a>
         </div>
       </div>
     </div>
