modified code in index.html and changed flowers information

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 			<h1>Flower Catalog</h1>
 			<hr />
 			<div class="content" >
-				<img src="./images/freshorigins.jpg" alt="Flower" />
+				<img src="images/freshorigins.jpg" alt="Flower" />
 				<div >
 					<ul>
-						<li><a href="./abeliophyllum.html">Abeliophyllum</a></li>
-						<li><a href="./ageratum.html">Ageratum</a></li>
+						<li><a href="abeliophyllum.html">Abeliophyllum</a></li>
+						<li><a href="ageratum.html">Ageratum</a></li>
 					</ul>
-				<img src="./images/animated-flower-image-0021.gif" alt="jar" /></br>
+				<img src="images/animated-flower-image-0021.gif" alt="jar" /></br>
 				<a href="https://google.com">Guest Book</a>
 				</div>
 			</div>
