--- a/abeliophyllum.html
+++ b/abeliophyllum.html
@@ -5,11 +5,11 @@
   <body>
     <div class="page" id="Abeliophyllum">
       <h1>
-        <span><a href="./index.html">&lt;&lt;</a></span> Abeliophyllum
+        <span><a href="index.html">&lt;&lt;</a></span> Abeliophyllum
       </h1>
       <hr />
       <div class="content">
-        <img src="./images/pbase-Abeliophyllum.jpg" alt="Flower" />
+        <img src="images/pbase-Abeliophyllum.jpg" alt="Flower" />
         <div>
           <p>
             Abeliophyllum (White Forsythia, or Korean Abelialeaf) is a monotypic
@@ -17,15 +17,15 @@
             of one species, Abeliophyllum distichum Nakai, endemic to Korea,
             where it is endangered in the wild, occurring at only seven sites.
             It is related to Forsythia, but differs in having white, not yellow,
-            flowers. It is a deciduous shrub growing to 1–2 m tall. The leaves
-            are opposite, simple, 6–10 cm long and 3-4.5 cm wide, pubescent both
-            above and below. The flowers are pro- duced in early spring before
-            the new leaves appear; they are white and fragrant, about 1 cm long,
-            with a four-lobed corolla. The fruit is a round, winged samara 2–3
-            cm di- ameter. It is cultivated as an ornamental plant in Europe and
-            North America.
+            flowers. It is a deciduous shrub growing to 1 to 2 m tall. The
+            leaves are opposite, simple, 6 to 10 cm long and 3 to 4.5 cm wide,
+            pubescent both above and below. The flowers are produced in early
+            spring before the new leaves appear; they are white and fragrant,
+            about 1 cm long, with a four-lobed corolla. The fruit is a round,
+            winged samara 2 to 3 cm diameter. It is cultivated as an ornamental
+            plant in Europe and North America.
           </p>
-          <a href="./PDFs/Abeliophyllum.pdf" download>Download as pdf</a>
+          <a href="PDFs/Abeliophyllum.pdf" download>Download as pdf</a>
         </div>
       </div>
     </div>
