added a static page for guest book

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 						<li><a href="ageratum.html">Ageratum</a></li>
 					</ul>
 				<img src="images/animated-flower-image-0021.gif" alt="jar" /></br>
-				<a href="https://google.com">Guest Book</a>
+				<a href="guestBook.html">Guest Book</a>
 				</div>
 			</div>
 		</div>
