added script for hiding the jar for one second

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+		<script src="hideJar.js"></script>
     <link rel="stylesheet" href="styles.css" />
     <title>Flower Catalog</title>
   </head>
@@ -15,7 +16,7 @@
 						<li><a href="abeliophyllum.html">Abeliophyllum</a></li>
 						<li><a href="ageratum.html">Ageratum</a></li>
 					</ul>
-				<img src="images/animated-flower-image-0021.gif" alt="jar" /></br>
+				<img src="images/animated-flower-image-0021.gif" alt="jar" id="jar" onclick="hideJar()"/></br>
 				<a href="guestBook.html">Guest Book</a>
 				</div>
 			</div>
