added download feature to download

--- a/abeliophyllum.html
+++ b/abeliophyllum.html
@@ -25,7 +25,7 @@
             winged samara 2 to 3 cm diameter. It is cultivated as an ornamental
             plant in Europe and North America.
           </p>
-          <a href="PDFs/Abeliophyllum.pdf" download>Download as pdf</a>
+          <a href="PDFs/abeliophyllum.pdf" download>Download as pdf</a>
         </div>
       </div>
     </div>
