--- a/ageratum.html
+++ b/ageratum.html
@@ -22,7 +22,7 @@
             The fluffy flowers are lavender-blue, pink, lilac, or white; and
             spread in small compound umbels. They give small, dry fruits.
           </p>
-          <a href="PDFs/agerantum.pdf">Download as pdf</a>
+          <a href="PDFs/ageratum.pdf" download>Download as pdf</a>
         </div>
       </div>
     </div>
