refactored and restructured code

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-		<script src="hideJar.js"></script>
-    <link rel="stylesheet" href="styles.css" />
+		<script src="js/hideJar.js"></script>
+    <link rel="stylesheet" href="css/styles.css"/>
     <title>Flower Catalog</title>
   </head>
   <body >
