--- a/public/guestBook.html
+++ b/public/guestBook.html
@@ -12,15 +12,18 @@
       <h2>
         Leave a comment
       </h2>
-      <div class="content">
-        <form action="" method="POST">
+      <div  class="content">
+        <form action="showUserPage" method="POST">
           Name:<input type="text" name="name" /></br>
 					Comment: <textarea name="comment" id="comment" cols="30" rows="5"></textarea><br>
           <input type="submit" value="Submit" /></br>
 				</form>
-      </div>
+      </div >
 			<hr>
-			Date Time Name Comments List
+			<h4>COMMENTS</h4>
+			<div id="commentBox">
+			__comments__
+		</div>
     </div>
   </body>
 </html>
