modified styles.css to show all the comments in table

--- a/public/guestBook.html
+++ b/public/guestBook.html
@@ -22,7 +22,15 @@
 			<hr>
 			<h4>COMMENTS</h4>
 			<div id="commentBox">
-			__comments__
+				<table>
+					<tr>
+						<th>DATE </th>
+						<th>TIME </th>	
+						<th>NAME</th> 
+						<th>COMMENTS</th>
+					</tr>
+					__comments__
+				</table>
 		</div>
     </div>
   </body>
