made an object lookup for selecting handlers

--- a/public/guestBook.html
+++ b/public/guestBook.html
@@ -14,15 +14,14 @@
       </h2>
       <div  class="content">
         <form action="showUserPage" method="POST">
-          Name:<input type="text" name="name" /></br>
-					Comment: <textarea name="comment" id="comment" cols="30" rows="5"></textarea><br>
+          Name:<input type="text" name="name" required/></br>
+					Comment: <textarea name="comment" id="comment" required cols="30" rows="5"></textarea><br>
           <input type="submit" value="Submit" /></br>
 				</form>
       </div >
 			<hr>
-			<h4>COMMENTS</h4>
 			<div id="commentBox">
-				<table>
+				<table cellspacing='0px' border="1px">
 					<tr>
 						<th>DATE </th>
 						<th>TIME </th>	
