--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 			<hr />
 			<div class="content" >
 				<img src="images/freshorigins.jpg" alt="Flower" />
-				<div >
+				<div class = "links">
 					<ul>
 						<li><a href="abeliophyllum.html">Abeliophyllum</a></li>
 						<li><a href="ageratum.html">Ageratum</a></li>
