added tests for POST method

--- a/public/guestBook.html
+++ b/public/guestBook.html
@@ -13,7 +13,7 @@
         Leave a comment
       </h2>
       <div  class="content">
-        <form action="showUserPage" method="POST">
+        <form action="saveComments" method="POST">
           Name:<input type="text" name="name" required/></br>
 					Comment: <textarea name="comment" id="comment" required cols="30" rows="5"></textarea><br>
           <input type="submit" value="Submit" /></br>
